<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/image_corner"
    android:layout_gravity="bottom|center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="12dp"

        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:src="@drawable/tasbih_back"
        android:text="@string/deleteing_tasbih"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"

        android:contentDescription="@string/app_name"
        android:src="@drawable/tasbih_back"
        android:text="@string/sure_for_deleteing"
        android:layout_marginStart="20dp"
        android:textSize="24sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
    <Button
        android:id="@+id/delete_dialog_Btn"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/counter_shap_primary_color"
        android:text="@string/delete" />
        <Button
            android:id="@+id/delete_dialog_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/counter_shap_seconder_color"
            android:text="@string/cancel_test" />

    </LinearLayout>
</LinearLayout>