<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/image_corner"
    android:layout_gravity="bottom|center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">

    <TextView

        android:id="@+id/dialog_message_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:src="@drawable/tasbih_back"
        android:text="@string/translate"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/dialog_message_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/tasbih_back"
        android:text="@string/translate"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="15dp"
        android:textSize="20sp" />



        <Button
            android:layout_gravity="end"
            android:paddingEnd="32dp"
            android:paddingStart="32dp"
            android:id="@+id/close_dialog_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/counter_shap_primary_color"
            android:text="@string/close" />


</LinearLayout>